[workspace]
members = [
"contracts/*","packages/*"]
resolver = "2"

[workspace.package]
version = "0.0.1"

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false

[workspace.dependencies]

usb = { path = "packages/usb", package = "usb" }

usb-plugin = { path = "contracts/usb" }
usb-adapter = { path = "contracts/usb-adapter" }

cosmwasm-std = { version = "1.5.3" }
cosmwasm-schema = { version = "1.5.3" }
abstract-std = { version = "0.22.2" }
cw-orch-interchain = { version = "0.2.0" }
abstract-cw-orch-polytone = "2.0.0"
polytone = { package = "abstract-polytone", version = "1.0.5" }
polytone-note = { package = "abstract-polytone-note", version = "2.0.0" }
cw-semver = { version = "1.0" }
cw-controllers = { version = "1.1.2" }
cw-storage-plus = "1.2.0"
thiserror = { version = "1.0.50" }
schemars = "0.8"
cw-asset = { version = "3.0.0" }
abstract-app = { version = "0.22.2" }
abstract-adapter = { version = "0.22.2" }
abstract-interface = { version = "0.22.0" }
abstract-client = { version = "0.22.0" }
lazy_static = "1.4.0"
cw-orch = { version = "0.22.2" }
const_format = "0.2.32"
speculoos = "0.11.0"
semver = "1.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
clap = { version = "4.3.7" }
prost = "0.12.3"
prost-build = "0.12.3"
sha2 = "0.10.2"
hex = "0.4.3"
