[package]
name = "usb-plugin"
version = "0.0.1"
authors = ["hard-nett <hardnettt@proton.me>"]
edition = "2021"
homepage = ""
documentation = ""
repository = ""
license = "GPL-3.0-or-later"
keywords = ["cosmos", "cosmwasm", "abstractsdk"]
resolver = "2"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "schema"
required-features = ["schema"]

[[bin]]
name = "publish"
required-features = ["daemon-bin"]

[[bin]]
name = "local_daemon"
required-features = ["daemon-bin"]

[features]
default = ["export"]
export = []
daemon-bin = [
  "cw-orch/daemon",
  "dep:clap",
  "dep:abstract-client",
  "dep:dotenv",
  "dep:env_logger",
]
schema = ["abstract-app/schema"]

[dependencies]
cosmwasm-std = { workspace = true }
abstract-std = { workspace = true }
abstract-app = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-controllers = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true }
cw-asset = { workspace = true }
const_format = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
prost = { workspace = true }
prost-build = { workspace = true }
# Dependencies for interface
abstract-interface = { workspace = true }
abstract-client = { workspace = true, optional = true }
cw-orch = { workspace = true }
usb = { workspace = true }
polytone = { workspace = true }

# Dependencies for bins
clap = { workspace = true, optional = true, features = ["derive"] }
dotenv = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }

[dev-dependencies]
abstract-cw-orch-polytone = { workspace = true }
cw-orch-interchain = { workspace = true }
cw-orch = { workspace = true, features = ["daemon"] }
usb = { workspace = true }
abstract-client = { workspace = true }
abstract-app = { workspace = true, features = ["test-utils"] }