[package]
name = "bitsong-deploy"
version = "0.1.0"
edition = "2021"

exclude = ["contract.wasm", "hash.txt"]


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["export"]
export = []

[dependencies]
cosmrs = "0.16.0"
cw-orch-daemon = "0.22.1"
cw-orch-interchain = "0.2.0"
cw-orch-networks = "0.22.0"
cw-orch-core = "1.0.0"
cosmwasm-std = { version = "1.5.0", features = ["cosmwasm_1_2"] }
semver = "1.0"
cw-controllers = { version = "1.0" }
thiserror = { version = "1.0.50" }
cw-asset = { version = "3.0" }
cw2 = { version = "1.0" }
cw20 = { version = "1.0" }
cw20-base = { version = "1.0", features = ["library"] }
cw-orch = { version = "0.23.0" }
# cw-orch-clone-testing = { workspace = true }
cw-orch-polytone = { package = "abstract-cw-orch-polytone", version = "2.0.0" }
abstract-std = { version = "0.22.1"}
abstract-client = "0.22.1"
abstract-interface = { version = "0.22.1" }
tokio = { version = "1.4", features = ["full"] }
log = "0.4.14"
anyhow = "1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
reqwest = { version = "0.11.9" }
dotenv = "0.15.0"
env_logger = "0.10.0"
url = "2.4.1"
prost = "0.12.3"
prost-build = "0.12.3"
sha2 = "0.10.2"
hex = "0.4.3"

[dev-dependencies]